remove header row from csv for easier importing